--- a/NoesisGUI.MonoGameWrapper/NoesisGUI.MonoGameWrapper.csproj
+++ b/NoesisGUI.MonoGameWrapper/NoesisGUI.MonoGameWrapper.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.0.1641" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="Noesis.GUI" Version="3.0.12" />
   </ItemGroup>
 
